**************************************
*** SquirrelMail Stable Series 1.4 ***
**************************************

Version 1.4.20 - SVN
--------------------
  - Fix issue with search not using literals correctly (#2846511).

Version 1.4.20 RC2 - 17 Aug 2009
--------------------------------
  - Protect message deletion with security token system. (Secunia Advisory SA34627)

Version 1.4.20 RC1 - 12 Aug 2009
--------------------------------
  - Removed the shut down DSBL blocklists (#2796734).
  - Fixed broken RFC1918 reference in contrib/.htaccess and doc/.htaccess (#2798839).
  - Updated INSTALL doc to remove possible bad system admin typos (#2827153).
  - PHP 5.3 deprecates ereg functions (#2820952).
  - Filters plugin uses badly formatted literals request (#2805201).
  - Provide option for complete removal of usernames and user IP addresses
    from message headers, and remove personal data from Message ID seed.
    (#880029/847107)
  - Implemented page referal verification mechanism. (Secunia Advisory SA34627)
  - Implemented security token system. (Secunia Advisory SA34627)

Version 1.4.19 - 21 May 2009
----------------------------
  - Removed use of session_unregister() for compatibility with PHP 5.3.0
    and PHP 6.
  - Fixed the Filters plugin to allow commas in filter criteria text and
    not to error out when spam-scanning only unread mail.
  - Resend cookie to browser after session ID regeneration so it gets the
    right cookie parameters.
  - In SMTP, when we EHLO with an IP, wrap it in brackets (#2793154).
  - The shell escaping fix in map_yp_alias (CVE-2009-1579) was incomplete.
    Thanks Michal Hlavinka for noticing this. [CVE-2009-1381]

Version 1.4.18 - 11 May 2009
----------------------------
  - Fixed port detection in automatic base URL detection scheme
    (get_location()). (#2388423)
  - Added informational type option widget.
  - Added password type option widget.
  - Fixed filters plugin to allow spam filters to scan multiple