@@ -5,6 +5,7 @@
 Version 1.4.20 - SVN
 --------------------
   - Fix issue with search not using literals correctly (#2846511).
+  - Fix issue with returning to search results due to new security token code.
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
